--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,22 +25,11 @@ body {
   position: relative;
   z-index: auto;
   flex-grow: 1;
+  background: linear-gradient(to bottom right, #e0f7fa, #ffffff);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   overflow-y: auto;
-  background-color: #b2ebf2;
-  background-image:
-    linear-gradient(to bottom right, #b2ebf2, #ffffff),
-    linear-gradient(to right, rgba(0, 0, 0, 0.07) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.07) 1px, transparent 1px);
-
-  background-size:
-    100% 100%,
-    40px 40px,
-    40px 40px;
-
-  background-repeat: no-repeat, repeat, repeat;
 }
 
 #page-content h1,
