--- a/public/css/dashboard-map.css
+++ b/public/css/dashboard-map.css
@@ -2,3 +2,11 @@
   height: 100vh;
   width: 100%;
 }
+
+.barangay-label {
+  font-size: 11px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  text-align: center;
+}
