--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,36 +70,7 @@ body {
 }
 
 .file-tab-heading {
-  position: relative;
-  background: linear-gradient(to right, #4dd0e1, #00bcd4);
-  color: white !important;
-  display: inline-block;
-  padding: 12px 30px;
-  font-weight: bold;
-  font-size: 1.5rem;
-  width: auto;
-  min-height: 50px;
-  max-width: 500px;
-  text-align: center;
-  border-radius: 16px 16px 0 0;
-  margin-bottom: 0;
-  font-family: 'Poppins', sans-serif;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
-  overflow: hidden; 
-}
-
-.file-tab-heading::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -75%;
-  width: 50%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.4);
-  transform: skewX(-20deg);
-  animation: shine 10s infinite;
-  pointer-events: none;
-  border-radius: 16px 16px 0 0;
+  font-size:34px; font-weight:500; text-transform:uppercase;
 }
 
 .nav-link.text-white:hover,
